--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
     <title>首页</title>
 </head>
 <body>
-    
+    <script>
+  /*  window.location = 'https://aizhanglove.github.io/home/';*/
+    </script>
 </body>
 </html>
