--- a/home/index.html
+++ b/home/index.html
@@ -5,7 +5,8 @@
 		<title></title>
 		<link rel="stylesheet" type="text/css" href="css/reset.css"/>
 		<link rel="stylesheet" type="text/css" href="css/home.css"/>
-		<script src="../js/jquery-2.0.3.js	"></script>
+		<!-- <link rel="icon" type="image/x-icon" href="img/ai.ico"> -->
+		<link rel="shortcut icon" href="img/ai.ico">
 		<script type="text/javascript" src="js/tween.js"></script>
 		<script type="text/javascript" src="js/mTween.js"></script>
 		<script type="text/javascript" src="js/home4.js"></script>
