--- a/index.html
+++ b/index.html
@@ -2,12 +2,12 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta http-equiv="refresh" content="0; url=https://aizhanglove.github.io/home/" />
+    <!-- <meta http-equiv="refresh" content="0; url=https://aizhanglove.github.io/home/" /> -->
     <title>首页</title>
 </head>
 <body>
     <script>
-  /*  window.location = 'https://aizhanglove.github.io/home/';*/
+    window.location.href = 'home/index.html';
     </script>
 </body>
 </html>
