some bugs modify

--- a/home/index.html
+++ b/home/index.html
@@ -9,6 +9,7 @@
 		<link rel="shortcut icon" href="img/ai.ico">
 		<script type="text/javascript" src="js/tween.js"></script>
 		<script type="text/javascript" src="js/mTween.js"></script>
+		<script type="text/javascript" src="js/data.js"></script>
 		<script type="text/javascript" src="js/home4.js"></script>
 	</head>
 	<body>
@@ -44,21 +45,10 @@
 		</div>
 		<section id="content" class="clearFIX">
 			<ul	class="main fl">
-				<li class="mainLi">
+				<!-- <li class="mainLi">
 					<img src="img/1.png"/>
 				</li>
-				<li class="mainLi">
-					<img src="img/2.png"/>
-				</li>
-				<li class="mainLi">
-					<img src="img/3.png"/>
-				</li>
-				<li class="mainLi">
-					<img src="img/4.png"/>
-				</li>
-				<li class="mainLi">
-					<img src="img/5.png"/>
-				</li>
+				 -->
 				
 			</ul>
 			<div class="introduce fr">
